# edgequake-pdf2md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
crates/pdfium-auto/: Cargo.toml  README.md  build.rs
crates/pdfium-auto/src/: lib.rs
docs/: configuration.md  examples.md  how-it-works.md  installation.md  providers.md
plan/: 00-implementation-plan.md
scripts/: pre-publish-check.sh  setup-pdfium.sh
specs/: 00-index.md  01-overview.md  02-algorithm.md  03-pdf-internals.md  04-markdown-spec.md  05-crate-selection.md  06-api-design.md  07-cli-design.md  08-error-handling.md  09-testing-strategy.md  11-pdf-rendering-alternatives-study.md
src/: config.rs  convert.rs  error.rs  lib.rs  output.rs  progress.rs  prompts.rs  stream.rs
src/pipeline/: encode.rs  input.rs  llm.rs  mod.rs  postprocess.rs  render.rs
tap/: CONTRIBUTING.md  README.md  SECURITY.md
tap/.github/: CODEOWNERS
tap/.github/workflows/: verify-assets.yml
tap/Formula/: pdf2md.rb  pdfium.rb
tap/release/: check_assets.sh  generate-sha256.sh
test_cases/output/: arxiv_maintain_format.md  arxiv_page1.md  irs_form_1040.md  neuroscience_page1.json  neuroscience_textbook.md  neuroscience_tier1.md  sample_text_pages1_2.md
tests/: e2e.rs
