[package]
name    = "edgequake-pdf2md"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description  = "Convert PDF documents to Markdown using Vision Language Models — CLI and library"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/raphaelmansuy/edgequake-pdf2md"
homepage     = "https://github.com/raphaelmansuy/edgequake-pdf2md"
documentation = "https://docs.rs/edgequake-pdf2md"
readme       = "README.md"
keywords     = ["pdf", "markdown", "llm", "ocr", "vision"]
categories   = ["command-line-utilities", "text-processing"]
# Exclude heavyweight/non-essential paths from the published crate package.
# test_cases/ contains sample PDFs (~3.5 MB); platform binaries and exploration
# directories are never useful to crates.io consumers.
exclude      = [
    "test_cases/",
    "plan/",
    "specs/",
    "logs/",
    "zz-explore/",
    "libpdfium.dylib",
    "libpdfium.so",
    "pdfium.dll",
]

[[bin]]
name = "pdf2md"
path = "src/bin/pdf2md.rs"
required-features = ["cli"]

[lib]
name = "edgequake_pdf2md"
path = "src/lib.rs"

[dependencies]
# Core
pdfium-render  = { version = "0.8", features = ["pdfium_latest", "image_latest", "thread_safe"] }
# v0.2.2 fixes OpenAIProvider::convert_messages() silently dropping ChatMessage.images.
# We pin to "0.2.2" rather than "0.2" to guarantee the vision fix is present.
edgequake-llm  = "0.2.2"
tokio          = { version = "1", features = ["full"] }
futures        = "0.3"
tokio-stream   = "0.1"

# HTTP
reqwest        = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Image
image          = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64         = "0.22"

# File system
tempfile       = "3"

# Serialisation
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Error handling
thiserror      = "2"

# Logging
tracing        = "0.1"

# Regex (for post-processing)
regex          = "1"
once_cell      = "1"

# CLI (only for binary)
clap           = { version = "4", features = ["derive", "env", "color", "wrap_help"], optional = true }
indicatif      = { version = "0.17", optional = true }
anyhow         = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = ["cli"]
cli     = ["dep:clap", "dep:anyhow", "dep:tracing-subscriber", "dep:indicatif"]

[dev-dependencies]
tokio-test        = "0.4"
tempfile          = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
