[workspace]
members  = [".", "crates/pdfium-auto"]
resolver = "2"

[package]
name    = "edgequake-pdf2md"
version = "0.4.6"
edition = "2021"
rust-version = "1.88"
description  = "Convert PDF documents to Markdown using Vision Language Models — CLI and library"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/raphaelmansuy/edgequake-pdf2md"
homepage     = "https://github.com/raphaelmansuy/edgequake-pdf2md"
documentation = "https://docs.rs/edgequake-pdf2md"
readme       = "README.md"
keywords     = ["pdf", "markdown", "llm", "ocr", "vision"]
categories   = ["command-line-utilities", "text-processing"]
# Exclude heavyweight/non-essential paths from the published crate package.
# test_cases/ contains sample PDFs (~3.5 MB); platform binaries and exploration
# directories are never useful to crates.io consumers.
exclude      = [
    "test_cases/",
    "plan/",
    "specs/",
    "logs/",
    "zz-explore/",
    "libpdfium.dylib",
    "libpdfium.so",
    "pdfium.dll",
]

[[bin]]
name = "pdf2md"
path = "src/bin/pdf2md.rs"
required-features = ["cli"]

[lib]
name = "edgequake_pdf2md"
path = "src/lib.rs"

[dependencies]
# Core
pdfium-render  = { version = "0.8", features = ["pdfium_latest", "image_latest", "thread_safe"] }
# Auto-download pdfium: zero-friction setup for end-users
pdfium-auto    = { path = "crates/pdfium-auto", version = "0.3" }
# v0.2.3 adds MistralProvider with pixtral-12b-2409 vision support.
# v0.2.4 adds edgequake-litellm Python bindings (docs bump; no Rust API changes).
# v0.2.5 fixes issue #13: max_completion_tokens for gpt-4.1-nano / o-series
#         (async-openai upgraded 0.24→0.33; max_tokens now routes correctly).
# v0.2.6 fixes vision image forwarding in Ollama, LM Studio, and OpenRouter
#         providers (Issue #15 — images were silently dropped).
# v0.2.7 rewrites Azure OpenAI to use the async-openai AzureConfig type,
#         adds ImageData::from_url / is_url / to_api_url URL-native helpers,
#         adds content-filter guardrail (finish_reason="content_filter" →
#         LlmError::ApiError), and adds ProviderFactory Azure auto-detection.
#         edgequake-litellm 0.1.3 adds azure provider to list_providers().
# We pin to "0.2.7" to gain native Azure vision + URL image pass-through.
edgequake-llm  = "0.2.7"
tokio          = { version = "1", features = ["full"] }
futures        = "0.3"
tokio-stream   = "0.1"

# HTTP
reqwest        = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Image
image          = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64         = "0.22"

# File system
tempfile       = "3"

# Serialisation
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Error handling
thiserror      = "2"

# Logging
tracing        = "0.1"

# Regex (for post-processing)
regex          = "1"
once_cell      = "1"

# CLI (only for binary)
clap           = { version = "4", features = ["derive", "env", "color", "wrap_help"], optional = true }
indicatif      = { version = "0.17", optional = true }
anyhow         = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[features]
default = ["cli", "bundled"]
cli     = ["dep:clap", "dep:anyhow", "dep:tracing-subscriber", "dep:indicatif"]
# Embed the pdfium shared library in the binary at compile time (default).
# Build-time resolution: PDFIUM_BUNDLE_LIB env var, else auto-download via curl.
# Cache: ~/.cargo/pdfium-bundle/{VERSION}/{OS}-{ARCH}/  (override: PDFIUM_BUILD_CACHE_DIR)
# Opt out: cargo install edgequake-pdf2md --no-default-features --features cli
bundled = ["pdfium-auto/bundled"]

[dev-dependencies]
tokio-test        = "0.4"
tempfile          = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
