[package]
name         = "pdfium-auto"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.88"
description  = "Auto-download and cache PDFium binaries — zero-friction setup for pdfium-render"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/raphaelmansuy/edgequake-pdf2md"
keywords     = ["pdf", "pdfium", "rendering", "download", "setup"]
categories   = ["external-ffi-bindings", "rendering", "command-line-utilities"]
readme       = "README.md"

[features]
# Embed the pdfium dylib inside the Rust binary at compile time.
#
# Activate by setting the `PDFIUM_BUNDLE_LIB` environment variable to the
# path of a platform-compatible `libpdfium.dylib` / `libpdfium.so` /
# `pdfium.dll` *before* running `cargo build`:
#
#   PDFIUM_BUNDLE_LIB=/path/to/libpdfium.dylib \
#     cargo build --release --features pdfium-auto/bundled
#
# The embedded bytes are extracted to the pdfium-auto cache directory on
# first use, so the resulting binary is fully self-contained: no internet
# access or pre-installed shared library is required at runtime.
bundled = []

[dependencies]
# Re-export the pdfium-render Pdfium struct for callers
pdfium-render = { version = "0.8", features = ["pdfium_latest", "image_latest", "thread_safe"] }

# HTTP download  (blocking – used inside spawn_blocking / sync contexts)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Archive extraction
flate2       = "1"
tar          = "0"

# Error handling
thiserror    = "2"

# Platform-specific cache directories
dirs         = "5"
