[package]
name         = "pdfium-auto"
version      = "0.3.0"
edition      = "2021"
rust-version = "1.88"
description  = "Auto-download and cache PDFium binaries — zero-friction setup for pdfium-render"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/raphaelmansuy/edgequake-pdf2md"
keywords     = ["pdf", "pdfium", "rendering", "download", "setup"]
categories   = ["external-ffi-bindings", "rendering", "command-line-utilities"]
readme       = "README.md"

[features]
# Embed the pdfium dylib inside the Rust binary at compile time.
#
# When this feature is active, `build.rs` embeds the platform pdfium library
# into the binary via `include_bytes!`. On first run the bytes are extracted
# to the cache directory and the library is loaded from there.
#
# Build-time library resolution (first match wins):
#
#   1. PDFIUM_BUNDLE_LIB=/path/to/libpdfium  — set explicitly (CI / air-gapped)
#   2. Auto-download from bblanchon/pdfium-binaries via `curl`
#
# Auto-downloaded archives are cached in:
#   {$CARGO_HOME}/pdfium-bundle/{VERSION}/{TARGET_OS}-{TARGET_ARCH}/
#
# The resulting binary is fully self-contained: no internet access or
# pre-installed shared library is required at runtime.
bundled = []

[dependencies]
# Re-export the pdfium-render Pdfium struct for callers
pdfium-render = { version = "0.8", features = ["pdfium_latest", "image_latest", "thread_safe"] }

# HTTP download  (blocking – used inside spawn_blocking / sync contexts)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Archive extraction
flate2       = "1"
tar          = "0"

# Error handling
thiserror    = "2"

# Platform-specific cache directories
dirs         = "5"

[build-dependencies]
# Used by build.rs to extract the pdfium archive when bundling.
flate2 = "1"
tar    = "0"
